# AVS_HW2

./: Bus.cpp  Bus.h  CMakeLists.txt  Car.cpp  Car.h  Container.cpp  Container.h  README.md  Random.cpp  Random.h  Transport.cpp  Transport.h  Truck.cpp  Truck.h  main.cpp
answers/: answer_01.txt  answer_02.txt  answer_03.txt  answer_05.txt
